added common components + removed namespace from all base kustomizations in oci cluster

--- a/kubernetes/apps/oci/kube-system/kustomization.yaml
+++ b/kubernetes/apps/oci/kube-system/kustomization.yaml
@@ -2,9 +2,11 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+components:
+  - ../../../components/common
 namespace: kube-system
 resources:
-  - namespace.yaml
+  # - namespace.yaml
   - cilium/ks.yaml
   - metrics-server/ks.yaml
   - reflector/ks.yaml
