--- a/kubernetes/apps/oci/database/kustomization.yaml
+++ b/kubernetes/apps/oci/database/kustomization.yaml
@@ -2,7 +2,9 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+components:
+  - ../../../components/common
 namespace: database
 resources:
-  - namespace.yaml
+  # - namespace.yaml
   - cloudnative-pg/ks.yaml
