--- a/kubernetes/apps/oci/network/kustomization.yaml
+++ b/kubernetes/apps/oci/network/kustomization.yaml
@@ -2,8 +2,10 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+components:
+  - ../../../components/common
 namespace: network
 resources:
-  - namespace.yaml
+  # - namespace.yaml
   - envoy-gateway/ks.yaml
   - external-dns/ks.yaml
