--- a/kubernetes/apps/oci/security/kustomization.yaml
+++ b/kubernetes/apps/oci/security/kustomization.yaml
@@ -2,8 +2,10 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+components:
+  - ../../../components/common
 namespace: security
 resources:
-  - namespace.yaml
+  # - namespace.yaml
   - cert-manager/ks.yaml
   - external-secrets/ks.yaml
