--- a/kubernetes/apps/oci/storage/kustomization.yaml
+++ b/kubernetes/apps/oci/storage/kustomization.yaml
@@ -2,8 +2,10 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+components:
+  - ../../../components/common
 namespace: storage
 resources:
-  - namespace.yaml
+  # - namespace.yaml
   - democratic-csi/ks.yaml
   - openebs/ks.yaml
