--- a/kubernetes/clusters/oci/ks.yaml
+++ b/kubernetes/clusters/oci/ks.yaml
@@ -11,13 +11,28 @@ spec:
     secretRef:
       name: sops-age
   interval: 10m
+  patches:
+    # Add postBuild substitutions to child Kustomizations
+    - patch: |-
+        apiVersion: kustomize.toolkit.fluxcd.io/v1
+        kind: Kustomization
+        metadata:
+          name: not-used
+        spec:
+          postBuild:
+            substituteFrom:
+              - kind: Secret
+                name: cluster-secrets
+                optional: false
+      target:
+        group: kustomize.toolkit.fluxcd.io/v1
+        kind: Kustomization
   path: ./kubernetes/apps/oci
   postBuild:
     substituteFrom:
-      - kind: ConfigMap
-        name: cluster-config
       - kind: Secret
         name: cluster-secrets
+        optional: true
   prune: true
   sourceRef:
     kind: GitRepository
@@ -25,17 +40,3 @@ spec:
     namespace: flux-system
   timeout: 5m
   wait: true
-  patches:
-    # Add SOPS decryption to specific children
-    - patch: |-
-        apiVersion: kustomize.toolkit.fluxcd.io/v1
-        kind: Kustomization
-        metadata:
-          name: not-used
-        spec:
-          decryption:
-            provider: sops
-            secretRef:
-              name: sops-age
-      target:
-        labelSelector: decryption.flux/enabled=true
