--- a/kubernetes/clusters/oci/ks.yaml
+++ b/kubernetes/clusters/oci/ks.yaml
@@ -10,7 +10,7 @@ spec:
   patches:
     # Add postBuild substitutions to child Kustomizations
     - patch: |-
-        apiVersion: kustomize.toolkit.fluxcd.io/v1
+        apiVersion: v1
         kind: Kustomization
         metadata:
           name: not-used
@@ -21,7 +21,7 @@ spec:
                 name: cluster-secrets
                 optional: false
       target:
-        group: kustomize.toolkit.fluxcd.io/v1
+        group: v1
         kind: Kustomization
   path: ./kubernetes/apps/oci
   postBuild:
