--- a/kubernetes/apps/base/flux-system/addons/httproute.yaml
+++ b/kubernetes/apps/base/flux-system/addons/httproute.yaml
@@ -6,7 +6,7 @@ metadata:
   name: github-webhook
 spec:
   hostnames:
-    - 'flux-webhook.${CLUSTER_DOMAIN}'
+    - 'flux-webhook.test.domain'
   parentRefs:
     - name: external
       namespace: network
