configured democratic-csi driver and controller

--- a/kubernetes/apps/base/storage/democratic-csi/app/helmrelease.yaml
+++ b/kubernetes/apps/base/storage/democratic-csi/app/helmrelease.yaml
@@ -30,3 +30,6 @@ spec:
     cleanupOnFail: true
     remediation:
       retries: 3
+  valuesFrom:
+    - kind: ConfigMap
+      name: democratic-csi-values
