--- a/kubernetes/apps/base/storage/democratic-csi/app/kustomization.yaml
+++ b/kubernetes/apps/base/storage/democratic-csi/app/kustomization.yaml
@@ -2,5 +2,11 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+configMapGenerator:
+  - name: democratic-csi-values
+    files:
+      - values.yaml=./values.yaml
+configurations:
+  - kustomizeconfig.yaml
 resources:
   - helmrelease.yaml
