file -> File for democratic-csi fsGroupPolicy

--- a/kubernetes/apps/base/storage/democratic-csi/app/values.yaml
+++ b/kubernetes/apps/base/storage/democratic-csi/app/values.yaml
@@ -11,7 +11,7 @@ controller:
     enabled: true
   strategy: node
 csiDriver:
-  fsGroupPolicy: file
+  fsGroupPolicy: File
   name: local-hostpath.cluster.local
   storageCapacity: true
 driver:
