added local-hostpath storage class

--- a/kubernetes/apps/base/storage/democratic-csi/app/values.yaml
+++ b/kubernetes/apps/base/storage/democratic-csi/app/values.yaml
@@ -34,3 +34,9 @@ node:
         path: *storagePath
         type: DirectoryOrCreate
       name: local-hostpath
+storageClasses:
+  - allowVolumeExpansion: true
+    defaultClass: true
+    name: local-hostpath
+    reclaimPolicy: Delete
+    volumeBindingMode: WaitForFirstConsumer
