temporarily remove cloudnative-pg from oci cluster

--- a/kubernetes/apps/oci/database/kustomization.yaml
+++ b/kubernetes/apps/oci/database/kustomization.yaml
@@ -5,6 +5,6 @@ kind: Kustomization
 components:
   - ../../../components/common
 namespace: database
-resources:
+resources: []
   # - namespace.yaml
-  - cloudnative-pg/ks.yaml
+  # - cloudnative-pg/ks.yaml
