update envoy gateway config on oci cluster

--- a/kubernetes/apps/oci/network/envoy-gateway/gateway/external.yaml
+++ b/kubernetes/apps/oci/network/envoy-gateway/gateway/external.yaml
@@ -11,6 +11,9 @@ spec:
   infrastructure:
     annotations:
       external-dns.alpha.kubernetes.io/hostname: *hostname
+      service.beta.kubernetes.io/oci-load-balancer-shape: flexible
+      service.beta.kubernetes.io/oci-load-balancer-shape-flex-max: "10"
+      service.beta.kubernetes.io/oci-load-balancer-shape-flex-min: "10"
   listeners:
     - allowedRoutes:
         namespaces:
