updated external-dns-aws to use external secret

--- a/kubernetes/apps/base/network/external-dns/aws/kustomization.yaml
+++ b/kubernetes/apps/base/network/external-dns/aws/kustomization.yaml
@@ -9,5 +9,5 @@ configMapGenerator:
 configurations:
   - kustomizeconfig.yaml
 resources:
+  - externalsecret.yaml
   - helmrelease.yaml
-  - secret.sops.yaml
