created external secret for cert-manager

--- a/kubernetes/apps/base/security/cert-manager/app/kustomization.yaml
+++ b/kubernetes/apps/base/security/cert-manager/app/kustomization.yaml
@@ -9,7 +9,7 @@ configMapGenerator:
 configurations:
   - kustomizeconfig.yaml
 resources:
+  - externalsecret.yaml
   - helmrelease.yaml
   - letsencrypt.yaml
-  - secret.sops.yaml
   - selfsigned.yaml
