--- a/kubernetes/apps/base/security/cert-manager/app/letsencrypt.yaml
+++ b/kubernetes/apps/base/security/cert-manager/app/letsencrypt.yaml
@@ -13,12 +13,12 @@ spec:
       - dns01:
           route53:
             accessKeyIDSecretRef:
-              key: access_key
-              name: cert-manager-route53
+              key: AWS_ACCESS_KEY_ID
+              name: &name cert-manager-route53
             region: ap-southeast-2
             secretAccessKeySecretRef:
-              key: secret_key
-              name: cert-manager-route53
+              key: AWS_SECRET_ACCESS_KEY
+              name: *name
         selector:
           dnsZones:
             - ${CLUSTER_DOMAIN}
