turned off attachRequired for local-hostpath csiDriver

--- a/kubernetes/apps/base/storage/democratic-csi/app/values.yaml
+++ b/kubernetes/apps/base/storage/democratic-csi/app/values.yaml
@@ -17,6 +17,7 @@ controller:
     enabled: true
   strategy: node
 csiDriver:
+  attachRequired: false
   fsGroupPolicy: File
   name: local-hostpath.cluster.local
   storageCapacity: true
