--- a/kubernetes/apps/oci/storage/kustomization.yaml
+++ b/kubernetes/apps/oci/storage/kustomization.yaml
@@ -7,5 +7,5 @@ components:
 namespace: storage
 resources:
   # - namespace.yaml
-  # - democratic-csi/ks.yaml
+  - democratic-csi/ks.yaml
   - snapshot-controller/ks.yaml
