added extraArgs for external-snapshotter in democratic-csi

--- a/kubernetes/apps/base/storage/democratic-csi/app/values.yaml
+++ b/kubernetes/apps/base/storage/democratic-csi/app/values.yaml
@@ -15,6 +15,9 @@ controller:
     enabled: false
   externalSnapshotter:
     enabled: true
+    extraArgs:
+      - --leader-election=false
+      - --node-deployment=true
   strategy: node
 csiDriver:
   attachRequired: false
