added VolumeSnapshotClass for local-hostpath

--- a/kubernetes/apps/base/storage/democratic-csi/app/values.yaml
+++ b/kubernetes/apps/base/storage/democratic-csi/app/values.yaml
@@ -47,6 +47,12 @@ node:
 storageClasses:
   - allowVolumeExpansion: true
     defaultClass: true
-    name: local-hostpath
+    name: &name local-hostpath
     reclaimPolicy: Delete
     volumeBindingMode: WaitForFirstConsumer
+volumeSnapshotClasses:
+  - annotations:
+      snapshot.storage.kubernetes.io/is-default-class: true
+    deletionPolicy: Delete
+    name: *name
+    parameters: {}
