boolean -> string for VSC annotation

--- a/kubernetes/apps/base/storage/democratic-csi/app/values.yaml
+++ b/kubernetes/apps/base/storage/democratic-csi/app/values.yaml
@@ -52,7 +52,7 @@ storageClasses:
     volumeBindingMode: WaitForFirstConsumer
 volumeSnapshotClasses:
   - annotations:
-      snapshot.storage.kubernetes.io/is-default-class: true
+      snapshot.storage.kubernetes.io/is-default-class: "true"
     deletionPolicy: Delete
     name: *name
     parameters: {}
