--- a/kubernetes/components/cloudnative-pg/cluster.yaml
+++ b/kubernetes/components/cloudnative-pg/cluster.yaml
@@ -3,10 +3,10 @@
 apiVersion: postgresql.cnpg.io/v1
 kind: Cluster
 metadata:
-  name: postgres-v17
+  name: ${APP}
 spec:
   imageName: ghcr.io/cloudnative-pg/postgresql:17.5
-  instances: 1
+  instances: ${CNPG_INSTANCES:=1}
   storage:
-    size: 10Gi
-    storageClass: local-hostpath
+    size: ${CNPG_STORAGE_SIZE:=2Gi}
+    storageClass: ${CNPG_STORAGE_STORAGECLASS:=local-hostpath}
