--- a/kubernetes/apps/base/database/dragonfly-operator/app/kustomization.yaml
+++ b/kubernetes/apps/base/database/dragonfly-operator/app/kustomization.yaml
@@ -2,10 +2,5 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-components:
-  - ../../../components/common
-namespace: database
 resources:
-  # - namespace.yaml
-  - cloudnative-pg/ks.yaml
-  - dragonfly-operator/ks.yaml
+  - helmrelease.yaml
