changed cloudnative-pg external secret to actually work with apps other than authentik

--- a/kubernetes/components/cloudnative-pg/externalsecret.yaml
+++ b/kubernetes/components/cloudnative-pg/externalsecret.yaml
@@ -7,16 +7,13 @@ metadata:
 spec:
   dataFrom:
     - extract:
-        key: ${APP}
+        key: *name
   secretStoreRef:
     kind: ClusterSecretStore
     name: bitwarden
   target:
     name: *name
     template:
-      data:
-        password: '{{ .AUTHENTIK_POSTGRESQL__PASSWORD }}'
-        username: '{{ .AUTHENTIK_POSTGRESQL__USER }}'
       metadata:
         labels:
           cnpg.io/reload: "true"
