dynamically generate cloudnative-pg cluster password

--- a/kubernetes/components/cloudnative-pg/externalsecret.yaml
+++ b/kubernetes/components/cloudnative-pg/externalsecret.yaml
@@ -6,14 +6,21 @@ metadata:
   name: &name ${APP}-cloudnative-pg
 spec:
   dataFrom:
-    - extract:
-        key: *name
+    - sourceRef:
+        generatorRef:
+          apiVersion: generators.external-secrets.io/v1alpha1
+          kind: Password
+          name: ${APP}
   secretStoreRef:
     kind: ClusterSecretStore
     name: bitwarden
   target:
+    creationPolicy: Merge
     name: *name
     template:
+      data:
+        password: '{{ .password }}'
+        username: ${APP}
       metadata:
         labels:
           cnpg.io/reload: "true"
