moved from cluster generated password to global superuser password and app specific initialization of data

--- a/kubernetes/apps/base/security/authentik/app/externalsecret.yaml
+++ b/kubernetes/apps/base/security/authentik/app/externalsecret.yaml
@@ -8,8 +8,27 @@ spec:
   dataFrom:
     - extract:
         key: *name
+    - extract:
+        key: cloudnative-pg
   secretStoreRef:
     kind: ClusterSecretStore
     name: bitwarden
   target:
     name: *name
+    template:
+      data:
+        AUTHENTIK_BOOTSTRAP_EMAIL: "{{ .AUTHENTIK_BOOTSTRAP_EMAIL }}"
+        AUTHENTIK_BOOTSTRAP_PASSWORD: "{{ .AUTHENTIK_BOOTSTRAP_PASSWORD }}"
+        AUTHENTIK_BOOTSTRAP_TOKEN: "{{ .AUTHENTIK_TOKEN }}"
+        AUTHENTIK_POSTGRESQL__HOST: &dbhost authentik-rw.security.svc.cluster.local
+        AUTHENTIK_POSTGRESQL__NAME: &dbname authentik
+        AUTHENTIK_POSTGRESQL__PASSWORD: &dbpassword "{{ .AUTHENTIK_POSTGRESQL_PASSWORD }}"
+        AUTHENTIK_POSTGRESQL__USER: &dbuser "{{ .AUTHENTIK_POSTGRES_USER }}"
+        AUTHENTIK_SECRET_KEY: "{{ .AUTHENTIK_SECRET_KEY }}"
+        INIT_POSTGRES_DBNAME: *dbname
+        INIT_POSTGRES_HOST: *dbhost
+        INIT_POSTGRES_PASS: *dbpassword
+        INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPERUSER_PASSWORD }}"
+        INIT_POSTGRES_SUPER_USER: "{{ .POSTGRES_SUPERUSER_USERNAME }}"
+        INIT_POSTGRES_USER: *dbuser
+        
