--- a/kubernetes/apps/base/security/authentik/app/values.yaml
+++ b/kubernetes/apps/base/security/authentik/app/values.yaml
@@ -1,16 +1,12 @@
 ---
 global:
-  env:
-    - name: AUTHENTIK_POSTGRESQL__PASSWORD
-      valueFrom:
-        secretKeyRef:
-          key: password
-          name: ${APP}-cloudnative-pg
-    - name: AUTHENTIK_POSTGRESQL__USER
-      valueFrom:
-        secretKeyRef:
-          key: username
-          name: ${APP}-cloudnative-pg
   envFrom:
     - secretRef:
-        name: authentik
+        name: ${APP}
+server:
+  initContainers:
+    - envFrom:
+        secretRef:
+          name: ${APP}
+      image: ghcr.io/home-operations/postgres-init:17.5
+      name: postgres-init
