--- a/kubernetes/components/cloudnative-pg/externalsecret.yaml
+++ b/kubernetes/components/cloudnative-pg/externalsecret.yaml
@@ -6,11 +6,8 @@ metadata:
   name: &name ${APP}-cloudnative-pg
 spec:
   dataFrom:
-    - sourceRef:
-        generatorRef:
-          apiVersion: generators.external-secrets.io/v1alpha1
-          kind: Password
-          name: ${APP}
+    - extract:
+        key: cloudnative-pg
   secretStoreRef:
     kind: ClusterSecretStore
     name: bitwarden
@@ -19,8 +16,8 @@ spec:
     name: *name
     template:
       data:
-        password: '{{ .password }}'
-        username: ${APP}
+        password: "{{ .POSTGRES_SUPERUSER_PASSWORD }}"
+        username: "{{ .POSTGRES_SUPERUSER_USERNAME }}"
       metadata:
         labels:
           cnpg.io/reload: "true"
