fixed authentik external secret

--- a/kubernetes/apps/base/security/authentik/app/externalsecret.yaml
+++ b/kubernetes/apps/base/security/authentik/app/externalsecret.yaml
@@ -23,7 +23,7 @@ spec:
         AUTHENTIK_POSTGRESQL__HOST: &dbhost authentik-rw.security.svc.cluster.local
         AUTHENTIK_POSTGRESQL__NAME: &dbname authentik
         AUTHENTIK_POSTGRESQL__PASSWORD: &dbpassword "{{ .AUTHENTIK_POSTGRESQL_PASSWORD }}"
-        AUTHENTIK_POSTGRESQL__USER: &dbuser "{{ .AUTHENTIK_POSTGRES_USER }}"
+        AUTHENTIK_POSTGRESQL__USER: &dbuser "{{ .AUTHENTIK_POSTGRESQL_USER }}"
         AUTHENTIK_SECRET_KEY: "{{ .AUTHENTIK_SECRET_KEY }}"
         INIT_POSTGRES_DBNAME: *dbname
         INIT_POSTGRES_HOST: *dbhost
