--- a/kubernetes/components/cloudnative-pg/cluster.yaml
+++ b/kubernetes/components/cloudnative-pg/cluster.yaml
@@ -5,6 +5,7 @@ kind: Cluster
 metadata:
   name: ${APP}
 spec:
+  enableSuperuserAccess: true
   imageName: ghcr.io/cloudnative-pg/postgresql:17.5
   instances: ${CNPG_INSTANCES:=1}
   storage:
