component changes to make service endpoints more clear

--- a/kubernetes/apps/base/security/authentik/app/externalsecret.yaml
+++ b/kubernetes/apps/base/security/authentik/app/externalsecret.yaml
@@ -20,7 +20,7 @@ spec:
         AUTHENTIK_BOOTSTRAP_EMAIL: "{{ .AUTHENTIK_BOOTSTRAP_EMAIL }}"
         AUTHENTIK_BOOTSTRAP_PASSWORD: "{{ .AUTHENTIK_BOOTSTRAP_PASSWORD }}"
         AUTHENTIK_BOOTSTRAP_TOKEN: "{{ .AUTHENTIK_TOKEN }}"
-        AUTHENTIK_POSTGRESQL__HOST: &dbhost authentik-rw.security.svc.cluster.local
+        AUTHENTIK_POSTGRESQL__HOST: &dbhost authentik-cluster-rw.security.svc.cluster.local
         AUTHENTIK_POSTGRESQL__NAME: &dbname authentik
         AUTHENTIK_POSTGRESQL__PASSWORD: &dbpassword "{{ .AUTHENTIK_POSTGRESQL_PASSWORD }}"
         AUTHENTIK_POSTGRESQL__USER: &dbuser "{{ .AUTHENTIK_POSTGRESQL_USER }}"
