--- a/kubernetes/components/cloudnative-pg/cluster.yaml
+++ b/kubernetes/components/cloudnative-pg/cluster.yaml
@@ -3,11 +3,14 @@
 apiVersion: postgresql.cnpg.io/v1
 kind: Cluster
 metadata:
-  name: ${APP}
+  name: ${APP}-cluster
 spec:
   enableSuperuserAccess: true
   imageName: ghcr.io/cloudnative-pg/postgresql:17.5
   instances: ${CNPG_INSTANCES:=1}
+  managed:
+    services:
+      disabledDefaultServices: ${CNPG_DISABLED_DEFAULT_SERVICES:=["r", "ro"]}
   storage:
     size: ${CNPG_STORAGE_SIZE:=2Gi}
     storageClass: ${CNPG_STORAGE_STORAGECLASS:=local-hostpath}
