--- a/kubernetes/apps/base/security/authentik/app/externalsecret.yaml
+++ b/kubernetes/apps/base/security/authentik/app/externalsecret.yaml
@@ -24,6 +24,7 @@ spec:
         AUTHENTIK_POSTGRESQL__NAME: &dbname authentik
         AUTHENTIK_POSTGRESQL__PASSWORD: &dbpassword "{{ .AUTHENTIK_POSTGRESQL_PASSWORD }}"
         AUTHENTIK_POSTGRESQL__USER: &dbuser "{{ .AUTHENTIK_POSTGRESQL_USER }}"
+        AUTHENTIK_REDIS__HOST: authentik-dragonfly.security.svc.cluster.local
         AUTHENTIK_SECRET_KEY: "{{ .AUTHENTIK_SECRET_KEY }}"
         INIT_POSTGRES_DBNAME: *dbname
         INIT_POSTGRES_HOST: *dbhost
