--- a/kubernetes/apps/base/security/authentik/app/values.yaml
+++ b/kubernetes/apps/base/security/authentik/app/values.yaml
@@ -14,7 +14,7 @@ server:
     main:
       enabled: true
       hostnames:
-        - 'auth.${CLUSTER_DOMAIN}'
+        - 'sso.${CLUSTER_DOMAIN}'
       parentRefs:
         - name: external
           namespace: network
