--- a/kubernetes/apps/base/observability/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/apps/base/observability/kube-prometheus-stack/app/helmrelease.yaml
@@ -1,19 +1,27 @@
 ---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/ocirepository-source-v1beta2.json
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: OCIRepository
+metadata:
+  name: kube-prometheus-stack
+spec:
+  interval: 5m
+  layerSelector:
+    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
+    operation: copy
+  ref:
+    tag: 72.3.0
+  url: oci://ghcr.io/prometheus-community/charts/kube-prometheus-stack
+---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/helmrelease-helm-v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: kube-prometheus-stack
-  namespace: observability
 spec:
-  chart:
-    spec:
-      chart: kube-prometheus-stack
-      sourceRef:
-        kind: HelmRepository
-        name: prometheus-community
-        namespace: flux-system
-      version: 72.3.0
+  chartRef:
+    kind: OCIRepository
+    name: kube-prometheus-stack
   install:
     remediation:
       retries: -1
