--- a/kubernetes/apps/oci/observability/kube-prometheus-stack/ks.yaml
+++ b/kubernetes/apps/oci/observability/kube-prometheus-stack/ks.yaml
@@ -3,16 +3,19 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: kube-prometheus-stack
-  namespace: observability
+  name: &app kube-prometheus-stack
 spec:
-  interval: 30m
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *app
+  interval: 1h
   path: ./kubernetes/apps/base/observability/kube-prometheus-stack/app
   prune: true
-  retryInterval: 1m
+  retryInterval: 2m
   sourceRef:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
-  timeout: 3m
-  wait: true
+  targetNamespace: observability
+  timeout: 5m
+  wait: false
