--- a/kubernetes/apps/oci/observability/grafana/ks.yaml
+++ b/kubernetes/apps/oci/observability/grafana/ks.yaml
@@ -3,18 +3,19 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: grafana
-  namespace: observability
-  labels:
-    decryption.flux/enabled: true
+  name: &app grafana
 spec:
-  interval: 30m
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *app
+  interval: 1h
   path: ./kubernetes/apps/base/observability/grafana/app
   prune: true
-  retryInterval: 1m
+  retryInterval: 2m
   sourceRef:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
-  timeout: 3m
-  wait: true
+  targetNamespace: observability
+  timeout: 5m
+  wait: false
