DRY common externalsecret

--- a/kubernetes/components/common/externalsecret.yaml
+++ b/kubernetes/components/common/externalsecret.yaml
@@ -3,13 +3,13 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: cluster-secrets
+  name: &name cluster-secrets
 spec:
   dataFrom:
     - extract:
-        key: cluster-secrets
+        key: *name
   secretStoreRef:
     kind: ClusterSecretStore
     name: bitwarden
   target:
-    name: cluster-secrets
+    name: *name
