--- a/kubernetes/apps/base/observability/grafana/app/values.yaml
+++ b/kubernetes/apps/base/observability/grafana/app/values.yaml
@@ -1,6 +1,4 @@
 ---
-adminPassword: ${CLUSTER_GRAFANA_ADMIN_PASSWORD}
-adminUser: ${CLUSTER_GRAFANA_ADMIN_USER}
 dashboardProviders:
   dashboardproviders.yaml:
     apiVersion: 1
@@ -56,6 +54,20 @@ datasources:
 env:
   GF_DATE_FORMATS_USE_BROWSER_LOCALE: true
   GF_SERVER_ROOT_URL: 'https://grafana.${CLUSTER_DOMAIN}'
+envFromSecrets:
+  - name: grafana
+grafana.ini:
+  auth:
+    oauth_auto_login: true
+    signout_redirect_url: '${CLUSTER_AUTH_URL}/application/o/grafana/end-session/'
+  auth.generic_oauth:
+    api_url: '${CLUSTER_AUTH_URL}/application/o/userinfo/'
+    auth_url: '${CLUSTER_AUTH_URL}/application/o/authorize/'
+    enabled: true
+    name: authentik
+    role_attribute_path: contains(groups, 'Grafana - Admin') && 'Admin' || contains(groups, 'Grafana - Editor') && 'Editor' || 'Viewer'
+    scopes: email openid profile
+    token_url: '${CLUSTER_AUTH_URL}/application/o/token/'
 route:
   main:
     enabled: true
