--- a/kubernetes/apps/oci/observability/kustomization.yaml
+++ b/kubernetes/apps/oci/observability/kustomization.yaml
@@ -6,5 +6,5 @@ components:
   - ../../../components/common
 namespace: observability
 resources:
-  - grafana/ks.yaml
+  # - grafana/ks.yaml
   - kube-prometheus-stack/ks.yaml
