revert grafana external secret and update values file to refer to specific user and password keys for the admin user

--- a/kubernetes/apps/base/observability/grafana/app/externalsecret.yaml
+++ b/kubernetes/apps/base/observability/grafana/app/externalsecret.yaml
@@ -17,5 +17,5 @@ spec:
       data:
         GF_AUTH_GENERIC_OAUTH_CLIENT_ID: '{{ .GRAFANA_CLIENT_ID }}'
         GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET: '{{ .GRAFANA_CLIENT_SECRET }}'
-        GF_SECURITY_ADMIN_PASSWORD: '{{ .GRAFANA_ADMIN_PASSWORD }}'
-        GF_SECURITY_ADMIN_USER: '{{ .GRAFANA_ADMIN_USER }}'
+        adminPassword: '{{ .GRAFANA_ADMIN_PASSWORD }}'
+        adminUser: '{{ .GRAFANA_ADMIN_USER }}'
