--- a/kubernetes/apps/base/observability/grafana/app/values.yaml
+++ b/kubernetes/apps/base/observability/grafana/app/values.yaml
@@ -1,4 +1,8 @@
 ---
+admin:
+  existingSecret: grafana
+  passwordKey: adminPassword
+  userKey: adminUser
 dashboardProviders:
   dashboardproviders.yaml:
     apiVersion: 1
