--- a/kubernetes/apps/oci/actions-runner-system/gha-runner-scale-set-controller/ks.yaml
+++ b/kubernetes/apps/oci/actions-runner-system/gha-runner-scale-set-controller/ks.yaml
@@ -9,13 +9,13 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   interval: 1h
-  path: ./kubernetes/apps/base/actions-runner/gha-runner-scale-set-controller/app
+  path: ./kubernetes/apps/base/actions-runner-system/gha-runner-scale-set-controller/app
   prune: true
   retryInterval: 2m
   sourceRef:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
-  targetNamespace: actions-runner
+  targetNamespace: actions-runner-system
   timeout: 5m
   wait: false
