--- a/kubernetes/apps/oci/actions-runner-system/kustomization.yaml
+++ b/kubernetes/apps/oci/actions-runner-system/kustomization.yaml
@@ -4,6 +4,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 components:
   - ../../../components/common
-namespace: actions-runner
+namespace: actions-runner-system
 resources:
   - gha-runner-scale-set-controller/ks.yaml
