--- a/kubernetes/apps/base/actions-runner-system/gha-runner-scale-set/app/externalsecret.yaml
+++ b/kubernetes/apps/base/actions-runner-system/gha-runner-scale-set/app/externalsecret.yaml
@@ -13,3 +13,8 @@ spec:
     name: bitwarden
   target:
     name: *name
+    template:
+      data:
+        github_app_id: '{{ .github_app_id }}'
+        github_app_installation_id: '{{ .github_app_installation_id }}'
+        github_app_private_key: '{{ .github_app_private_key }}'
