added serviceaccount for gha-runner-scale-set

--- a/kubernetes/apps/base/actions-runner-system/gha-runner-scale-set/app/values.yaml
+++ b/kubernetes/apps/base/actions-runner-system/gha-runner-scale-set/app/values.yaml
@@ -15,3 +15,6 @@ githubConfigUrl: https://github.com/iamryanmacdonald/gitops
 githubConfigSecret: gha-runner-scale-set
 maxRunners: 2
 minRunners: 1
+template:
+  spec:
+    serviceAccountName: actions-runner
