--- a/kubernetes/apps/base/actions-runner-system/gha-runner-scale-set/app/serviceaccount.yaml
+++ b/kubernetes/apps/base/actions-runner-system/gha-runner-scale-set/app/serviceaccount.yaml
@@ -4,7 +4,7 @@ kind: ServiceAccount
 metadata:
   name: actions-runner
 ---
-apiVersion: v1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: actions-runner
