--- a/.github/workflows/renovate.yaml
+++ b/.github/workflows/renovate.yaml
@@ -34,7 +34,7 @@ jobs:
         uses: renovatebot/github-action@12f8ed8e6a936a00dc66b628d224488ac406b5e8
         with:
           configurationFile: .github/renovate.json5
-          renovate-version: ${{ inputs.version || "latest" }}
+          renovate-version: ${{ inputs.version || 'latest' }}
           token: x-access-token:${{ steps.app-token.outputs.token }}
 name: Renovate
 on:
