--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -1,7 +1,12 @@
 {
   $schema: "https://docs.renovatebot.com/renovate-schema.json",
   extends: [
-    "config:recommended"
+    "config:recommended",
+    "helpers:pinGithubActionDigests",
+    ":dependencyDashboard",
+    ":disableRateLimiting",
+    ":semanticCommits",
+    ":timezone(Australia/Melbourne)",
   ],
   dependencyDashboardTitle: "Renovate Dashboard 🤖",
   flux: {
