--- a/.github/workflows/renovate.yaml
+++ b/.github/workflows/renovate.yaml
@@ -44,6 +44,7 @@ on:
     paths:
       - .github/renovate.json5
       - .github/workflows/renovate.yaml
+      - .renovate/**.json5
   schedule:
     - cron: "0 * * * *"
   workflow_dispatch:
