--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -7,6 +7,7 @@
     ":disableRateLimiting",
     ":semanticCommits",
     ":timezone(Australia/Melbourne)",
+    "github>iamryanmacdonald/gitops//.renovate/labels.json5",
     "github>iamryanmacdonald/gitops//.renovate/semanticCommits.json5",
   ],
   dependencyDashboardTitle: "Renovate Dashboard 🤖",
