fix label colours

--- a/.github/labels.yaml
+++ b/.github/labels.yaml
@@ -1,10 +1,10 @@
 ---
 # Semantic Types
 - name: type/major
-  color: f6412d
+  color: "f6412d"
 - name: type/minor
-  color: ff9800
+  color: "ff9800"
 - name: type/patch
-  color: ffeC19
+  color: "ffeC19"
 - name: type/digest
-  color: ffeC19
+  color: "ffeC19"
