add more labels for renovate to use

--- a/.github/labels.yaml
+++ b/.github/labels.yaml
@@ -1,10 +1,19 @@
 ---
+# Renovate Types
+- name: renovate/container
+  color: "027fa0"
+- name: renovate/github-action
+  color: "027fa0"
+- name: renovate/helm
+  color: "027fa0"
+- name: renovate/terraform
+  color: "027fa0"
 # Semantic Types
+- name: type/digest
+  color: "ffeC19"
 - name: type/major
   color: "f6412d"
 - name: type/minor
   color: "ff9800"
 - name: type/patch
-  color: "ffeC19"
-- name: type/digest
   color: "ffeC19"
