--- a/.renovate/labels.json5
+++ b/.renovate/labels.json5
@@ -2,6 +2,26 @@
   $schema: "https://docs.renovatebot.com/renovate-schema.json",
   packageRules: [
     {
+      addLabels: ["renovate/container"],
+      matchDatasources: ["docker"],
+    },
+    {
+      addLabels: ["renovate/helm"],
+      matchDatasources: ["helm"],
+    },
+    {
+      addLabels: ["renovate/github-action"],
+      matchManagers: ["github-actions"],
+    },
+    {
+      addLabels: ["renovate/terraform"],
+      matchDatasources: ["terraform-module", "terraform-provider"],
+    },
+    {
+      labels: ["type/digest"],
+      matchUpdateTypes: ["digest"],
+    },
+    {
       labels: ["type/major"],
       matchUpdateTypes: ["major"],
     },
@@ -12,10 +32,6 @@
     {
       labels: ["type/patch"],
       matchUpdateTypes: ["patch"],
-    },
-    {
-      labels: ["type/digest"],
-      matchUpdateTypes: ["digest"],
     },
   ]
 }
