--- a/.github/workflows/flux-local.yaml
+++ b/.github/workflows/flux-local.yaml
@@ -26,7 +26,7 @@ jobs:
         uses: docker://ghcr.io/allenporter/flux-local:v7.5.4
         with:
           args: >-
-            diff
+            diff ${{ matrix.resource }}
             --all-namespaces
             --limit-bytes 10000
             --output-file diff.patch
