updated semantic commit naming in renovate

--- a/.renovate/semanticCommits.json5
+++ b/.renovate/semanticCommits.json5
@@ -2,6 +2,27 @@
   $schema: "https://docs.renovatebot.com/renovate-schema.json",
   packageRules: [
     {
+      commitMessageExtra: "({{currentDigestShort}} → {{newDigestShort}})",
+      matchUpdateTypes: ["digest"],
+      semanticCommitType: "chore",
+    },
+    {
+      commitMessageTopic: "image {{depName}}",
+      matchDatasources: ["docker"],
+      semanticCommitScope: "container",
+    },
+    {
+      commitMessageTopic: "action {{depName}}",
+      matchManagers: ["github-actions"],
+      semanticCommitScope: "github-action",
+      semanticCommitType: "ci",
+    },
+    {
+      commitMessageTopic: "chart {{depName}}",
+      matchDatasources: ["helm"],
+      semanticCommitScope: "helm",
+    },
+    {
       commitMessageExtra: "({{currentVersion}} → {{newVersion}})",
       commitMessagePrefix: "{{semanticCommitType}}({{semanticCommitScope}})!:",
       matchUpdateTypes: ["major"],
@@ -16,11 +37,6 @@
       commitMessageExtra: "({{currentVersion}} → {{newVersion}})",
       matchUpdateTypes: ["patch"],
       semanticCommitType: "fix",
-    },
-    {
-      commitMessageExtra: "({{currentDigestShort}} → {{newDigestShort}})",
-      matchUpdateTypes: ["digest"],
-      semanticCommitType: "chore",
     },
   ]
 }
