--- a/.mise.toml
+++ b/.mise.toml
@@ -5,13 +5,13 @@ ROOT_DIR = "{{config_root}}"
 SOPS_AGE_KEY_FILE = "{{config_root}}/age.agekey"
 
 [tools]
-"aqua:cilium/cilium-cli" = "0.18.3"
-"aqua:cert-manager/cmctl" = "2.2.0"
-"aqua:cli/cli" = "2.72.0"
-"aqua:cloudflare/cloudflared" = "2025.4.2"
-"aqua:derailed/popeye" = "0.22.1"
-"aqua:FiloSottile/age" = "1.2.1"
-"aqua:helm/helm" = "3.17.3"
-"aqua:helmfile/helmfile" = "1.0.0"
-"aqua:kubernetes/kubectl" = "1.33.0"
-"aqua:kubernetes-sigs/kustomize" = "5.6.0"
+# "aqua:cilium/cilium-cli" = "0.18.3"
+# "aqua:cert-manager/cmctl" = "2.2.0"
+# "aqua:cli/cli" = "2.72.0"
+# "aqua:cloudflare/cloudflared" = "2025.4.2"
+# "aqua:derailed/popeye" = "0.22.1"
+# "aqua:FiloSottile/age" = "1.2.1"
+# "aqua:helm/helm" = "3.17.3"
+# "aqua:helmfile/helmfile" = "1.0.0"
+# "aqua:kubernetes/kubectl" = "1.33.0"
+# "aqua:kubernetes-sigs/kustomize" = "5.6.0"
