added github-release labelling

--- a/.renovate/labels.json5
+++ b/.renovate/labels.json5
@@ -14,6 +14,10 @@
       matchManagers: ["github-actions"],
     },
     {
+      addLabels: ["renovate/github-release"],
+      matchManagers: ["github-releases"],
+    },
+    {
       addLabels: ["renovate/terraform"],
       matchDatasources: ["terraform-module", "terraform-provider"],
     },
