--- a/.github/labels.yaml
+++ b/.github/labels.yaml
@@ -4,6 +4,8 @@
   color: "027fa0"
 - name: renovate/github-action
   color: "027fa0"
+- name: renovate/github-release
+  color: "027fa0"
 - name: renovate/helm
   color: "027fa0"
 - name: renovate/terraform
