add renovate annotation for flux distribution version

--- a/kubernetes/clusters/oci/flux-system/flux-instance/app/values.yaml
+++ b/kubernetes/clusters/oci/flux-system/flux-instance/app/values.yaml
@@ -10,6 +10,7 @@ instance:
     - notification-controller
     - source-controller
   distribution:
+    # renovate: datasource=github-releases depName=controlplaneio-fluxcd/distribution
     version: 2.5.1
   sync:
     interval: 1h
