--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -61,7 +61,7 @@ jobs:
           terraform init \
             -backend-config="access_key=$TERRAFORM_S3_ACCESS_KEY" \
             -backend-config="endpoints=$TERRAFORM_S3_ENDPOINTS" \
-            -backend_config="secret_key=$TERRAFORM_S3_SECRET_KEY"
+            -backend-config="secret_key=$TERRAFORM_S3_SECRET_KEY"
         working-directory: ${{ matrix.paths }}
       
       - name: Terraform - validate
