--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -24,6 +24,7 @@ jobs:
       - name: List changed files
         run: echo ${{ steps.changed-files.outputs.all_changed_and_modified_files }}
   plan:
+    environment: terraform
     name: Terraform - Plan
     needs:
       - changed-files
@@ -53,15 +54,13 @@ jobs:
         working-directory: ${{ matrix.paths }}
 
       - env:
-          TERRAFORM_S3_ACCESS_KEY: ${{ secrets.TERRAFORM_S3_ACCESS_KEY }}
-          TERRAFORM_S3_ENDPOINTS: ${{ secrets.TERRAFORM_S3_ENDPOINTS }}
-          TERRAFORM_S3_SECRET_KEY: ${{ secrets.TERRAFORM_S3_SECRET_KEY }}
+          AWS_ACCESS_KEY_ID : ${{ vars.AWS_ACCESS_KEY_ID }}
+          AWS_ENDPOINT_URL_S3 : ${{ vars.AWS_ENDPOINT_URL_S3 }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         name: Terraform - init
         run: |
           terraform init \
-            -backend-config="access_key=$TERRAFORM_S3_ACCESS_KEY" \
-            -backend-config="endpoints=$TERRAFORM_S3_ENDPOINTS" \
-            -backend-config="secret_key=$TERRAFORM_S3_SECRET_KEY"
+            - no-color
         working-directory: ${{ matrix.paths }}
       
       - name: Terraform - validate
