multiline shenanigans in terraform plan

--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -80,8 +80,8 @@ jobs:
         name: Terraform - plan
         run: |
           terraform plan \
-            -input=false
-            -no-color
+            -input=false \
+            -no-color \
             -out tf.plan
         working-directory: ${{ matrix.paths }}
     strategy:
