don't create local files in CICD run

--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -82,7 +82,8 @@ jobs:
           terraform plan \
             -input=false \
             -no-color \
-            -out .planfile
+            -out .planfile \
+            -var "cicd=true"
         working-directory: ${{ matrix.paths }}
       
       - name: Post PR comment
