terraform will continue even when formatting files (causes an error)

--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -47,7 +47,8 @@ jobs:
         with:
           terraform_wrapper: false
       
-      - name: Terraform - fmt
+      - continue-on-error: true
+        name: Terraform - fmt
         run: |
           terraform fmt \
             -check
