--- a/.github/workflows/terraform-apply.yaml
+++ b/.github/workflows/terraform-apply.yaml
@@ -68,7 +68,7 @@ jobs:
       matrix:
         paths: ${{ fromJSON(needs.changed-files.outputs.matrix) }}
       max-parallel: 4
-name: Terraform
+name: Terraform - Apply
 on:
   push:
     branches:
