--- a/.github/workflows/terraform-plan.yaml
+++ b/.github/workflows/terraform-plan.yaml
@@ -97,7 +97,7 @@ jobs:
       matrix:
         paths: ${{ fromJSON(needs.changed-files.outputs.matrix) }}
       max-parallel: 4
-name: Terraform
+name: Terraform - Plan
 on:
   pull_request:
     branches:
