--- a/.github/workflows/terraform-apply.yaml
+++ b/.github/workflows/terraform-apply.yaml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           persist-credentials: false
-      
+
       - id: changed-files
         name: Get changed files
         uses: tj-actions/changed-files@ed68ef82c095e0d48ec87eccea555d944a631a4c # v46.0.5
@@ -19,8 +19,9 @@ jobs:
           dir_names: true
           dir_names_max_depth: 2
           files: terraform/**
+          files_ignore: terraform/_modules/**
           matrix: true
-      
+
       - name: List changed files
         run: echo ${{ steps.changed-files.outputs.all_changed_and_modified_files }}
   apply:
@@ -34,25 +35,25 @@ jobs:
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           persist-credentials: false
-      
+
       - name: Terraform - Install
         uses: hashicorp/setup-terraform@b9cd54a3c349d3f38e8881555d616ced269862dd # v3.1.2
         with:
           terraform_wrapper: false
 
       - env:
-          AWS_ACCESS_KEY_ID : ${{ vars.AWS_ACCESS_KEY_ID }}
-          AWS_ENDPOINT_URL_S3 : ${{ vars.AWS_ENDPOINT_URL_S3 }}
+          AWS_ACCESS_KEY_ID: ${{ vars.AWS_ACCESS_KEY_ID }}
+          AWS_ENDPOINT_URL_S3: ${{ vars.AWS_ENDPOINT_URL_S3 }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         name: Terraform - init
         run: |
           terraform init \
             -no-color
         working-directory: ${{ matrix.paths }}
-      
+
       - env:
-          AWS_ACCESS_KEY_ID : ${{ vars.AWS_ACCESS_KEY_ID }}
-          AWS_ENDPOINT_URL_S3 : ${{ vars.AWS_ENDPOINT_URL_S3 }}
+          AWS_ACCESS_KEY_ID: ${{ vars.AWS_ACCESS_KEY_ID }}
+          AWS_ENDPOINT_URL_S3: ${{ vars.AWS_ENDPOINT_URL_S3 }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           TF_VAR_bitwarden_access_token: ${{ secrets.BITWARDEN_ACCESS_TOKEN }}
           TF_VAR_bitwarden_organization_id: ${{ vars.BITWARDEN_ORGANIZATION_ID }}
